--- a/app/src/main/res/layout/dialog_bottom_folder_upload.xml
+++ b/app/src/main/res/layout/dialog_bottom_folder_upload.xml
@@ -119,7 +119,7 @@
             android:layout_marginHorizontal="@dimen/spacingBase"
             android:layout_marginTop="@dimen/spacingBase"
             android:enabled="@{viewModel.folderName.length() > 0}"
-            android:text="@{viewModel.registrationStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.add)}"
+            android:text="@{viewModel.folderRegistrationStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.add)}"
             android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:text="@string/complete" />
