[mod] 일부 EditText에서 maxLine을 1줄로 설정

--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -62,6 +62,7 @@
             android:layout_marginBottom="@dimen/spacingSmall"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
+            android:maxLines="1"
             android:onTextChanged="@{viewModel::onLoginEmailTextChanged}"
             android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
             app:layout_constraintEnd_toEndOf="parent"
@@ -79,6 +80,7 @@
             android:layout_marginTop="@dimen/spacing5"
             android:hint="@string/password"
             android:inputType="textPassword"
+            android:maxLines="1"
             android:onTextChanged="@{viewModel::onLoginPasswordTextChanged}"
             android:paddingVertical="@dimen/spacing12"
             android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
