--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -103,6 +103,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
                 android:inputType="textPassword"
+                android:maxLines="1"
                 android:onTextChanged="@{viewModel::onRegistrationPasswordTextChanged}"
                 android:paddingVertical="@dimen/spacing12"
                 android:text="@{viewModel.registrationPassword}"
