--- a/app/src/main/res/layout/dialog_new_folder_add.xml
+++ b/app/src/main/res/layout/dialog_new_folder_add.xml
@@ -67,6 +67,7 @@
                 android:layout_marginEnd="@dimen/spacing12"
                 android:hint="@string/folder_name"
                 android:maxLength="10"
+                android:maxLines="1"
                 android:onTextChanged="@{viewModel::onFolderNameTextChanged}"
                 android:text="@{viewModel.folderName}"
                 android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
