--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -101,6 +101,7 @@
             android:layout_marginTop="@dimen/spacing20"
             android:hint="@string/my_profile_edit_nickname_hint"
             android:maxLength="12"
+            android:maxLines="1"
             android:onTextChanged="@{viewModel::onNicknameTextChanged}"
             android:paddingVertical="@dimen/spacing12"
             android:text="@{viewModel.inputUserNickname}"
