--- a/app/src/main/res/layout/fragment_sign_in_email.xml
+++ b/app/src/main/res/layout/fragment_sign_in_email.xml
@@ -102,6 +102,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
                     android:inputType="textEmailAddress"
+                    android:maxLines="1"
                     android:onTextChanged="@{viewModel::onLoginEmailTextChanged}"
                     android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
                     app:layout_constraintTop_toTopOf="parent">
@@ -151,6 +152,7 @@
                     android:layout_marginTop="@dimen/spacingBase"
                     android:hint="@string/sign_in_email_verification_code_hint"
                     android:inputType="textPassword"
+                    android:maxLines="1"
                     android:onTextChanged="@{viewModel::onVerificationCodeTextChanged}"
                     android:textAppearance="@style/Widget.EditText.Basic.TextAppearance" />
 
