--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -202,20 +202,21 @@
         <item name="android:background">@drawable/shape_border_radius_45</item>
         <item name="android:backgroundTint">@color/black</item>
         <item name="android:gravity">center</item>
-        <item name="android:paddingStart">32dp</item>
-        <item name="android:paddingEnd">32dp</item>
-        <item name="android:paddingTop">@dimen/spacing12</item>
-        <item name="android:paddingBottom">@dimen/spacing12</item>
-        <item name="android:layout_marginStart">24dp</item>
-        <item name="android:layout_marginEnd">24dp</item>
-        <item name="android:layout_marginTop">@dimen/spacingBase</item>
+        <item name="android:lineSpacingExtra">2dp</item>
+        <item name="android:paddingStart">28dp</item>
+        <item name="android:paddingEnd">28dp</item>
+        <item name="android:paddingTop">@dimen/spacingBase</item>
+        <item name="android:paddingBottom">@dimen/spacingBase</item>
+        <item name="android:layout_marginStart">@dimen/spacingBase</item>
+        <item name="android:layout_marginEnd">@dimen/spacing20</item>
+        <item name="android:layout_marginTop">24dp</item>
         <item name="android:layout_marginBottom">@dimen/spacingBase</item>
     </style>
 
     <style name="Widget.Snackbar.TextAppearance" parent="">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/typographyBase</item>
-        <item name="android:fontFamily">@font/suit_r</item>
+        <item name="android:fontFamily">@font/suit_m</item>
     </style>
 
     <style name="My.Section.Title" parent="">
