--- a/app/src/main/res/layout/item_folder_horizontal.xml
+++ b/app/src/main/res/layout/item_folder_horizontal.xml
@@ -47,7 +47,8 @@
             android:id="@+id/check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_check"
+            android:background="@drawable/ic_check_circle"
+            android:backgroundTint="@color/green_500"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
