--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,7 +56,7 @@
     <style name="Widget.Dialog.TextAppearance.Title" parent="">
         <item name="android:fontFamily">@font/suit_b</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/typographyBase</item>
     </style>
 
     <style name="Widget.Dialog.TextAppearance.Description" parent="">
