[mod] 일반 등록 > 알림 설정 뷰를 fragment에서 dialog로 수정

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
 
     <!-- Widget -->
     <dimen name="widgetBottomDialogHeightBase">312dp</dimen>
+    <dimen name="widgetBottomDialogContentHeightBase">264dp</dimen>
     <dimen name="widgetHeightBase">50dp</dimen>
     <dimen name="widgetSquareFolder">80dp</dimen>
 
