--- a/app/src/main/res/layout/dialog_bottom_folder_list.xml
+++ b/app/src/main/res/layout/dialog_bottom_folder_list.xml
@@ -54,7 +54,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/folder_list"
             android:layout_width="match_parent"
-            android:layout_height="264dp"
+            android:layout_height="@dimen/widgetBottomDialogContentHeightBase"
             android:clipToPadding="false"
             android:paddingBottom="100dp"
             android:scrollbarFadeDuration="0"
