--- a/app/src/main/res/layout/dialog_bottom_folder_upload.xml
+++ b/app/src/main/res/layout/dialog_bottom_folder_upload.xml
@@ -20,9 +20,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/widgetBottomDialogHeightBase"
+        android:layout_height="wrap_content"
         android:background="@drawable/background_dialog_top_corner"
-        android:paddingBottom="@dimen/spacingBase"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,15 +29,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent">
-
-            <ImageButton
-                android:id="@+id/back"
-                style="@style/Widget.Button.Icon.Navigation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_back"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/title"
@@ -50,92 +40,107 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/back"
+                style="@style/Widget.Button.Icon.Navigation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_close"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/folder_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/background_dialog"
-            app:layout_constraintBottom_toTopOf="@id/add"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="@dimen/widgetBottomDialogContentHeightBase"
             app:layout_constraintTop_toBottomOf="@id/toolbar">
 
-            <EditText
-                android:id="@+id/folder_name"
-                style="@style/Widget.EditText.Basic"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/folder_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/folder_name"
-                android:inputType="text"
-                android:maxLength="10"
-                android:maxLines="1"
-                android:onTextChanged="@{viewModel::onFolderNameTextChanged}"
-                android:text="@{viewModel.folderName}"
-                android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
+                android:background="@drawable/background_dialog"
+                app:layout_constraintBottom_toTopOf="@id/add"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-            <ImageButton
-                android:id="@+id/delete"
-                style="@style/Widget.Button"
+                <EditText
+                    android:id="@+id/folder_name"
+                    style="@style/Widget.EditText.Basic"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/folder_name"
+                    android:inputType="text"
+                    android:maxLength="10"
+                    android:maxLines="1"
+                    android:onTextChanged="@{viewModel::onFolderNameTextChanged}"
+                    android:text="@{viewModel.folderName}"
+                    android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageButton
+                    android:id="@+id/delete"
+                    style="@style/Widget.Button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:onClick="@{() -> viewModel.resetFolderName()}"
+                    android:padding="@dimen/spacing10"
+                    android:src="@drawable/ic_delete_circle"
+                    app:layout_constraintBottom_toBottomOf="@id/folder_name"
+                    app:layout_constraintEnd_toEndOf="@id/folder_name"
+                    app:layout_constraintTop_toTopOf="@id/folder_name" />
+
+                <TextView
+                    android:id="@+id/folder_name_length"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{String.format(@string/length_format, viewModel.folderName.trim().length(), 10)}"
+                    android:textAppearance="@style/Widget.TextAppearance.Detail"
+                    android:textColor="@color/gray_200"
+                    app:layout_constraintEnd_toEndOf="@id/folder_name"
+                    app:layout_constraintTop_toTopOf="@id/folder_name_detail_text"
+                    tools:text="7/10글자" />
+
+                <TextView
+                    android:id="@+id/folder_name_detail_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing5"
+                    android:text="@string/folder_upload_name_already_exist_detail"
+                    android:textAppearance="@style/Widget.TextAppearance.Detail"
+                    android:visibility="@{viewModel.isExistFolderName == true ? View.VISIBLE : View.INVISIBLE}"
+                    app:layout_constraintStart_toStartOf="@id/folder_name"
+                    app:layout_constraintTop_toBottomOf="@id/folder_name" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/add"
+                style="@style/Widget.Button.Activate.Green"
+                android:layout_width="match_parent"
+                android:layout_margin="@dimen/spacingBase"
+                android:enabled="@{viewModel.folderName.trim().length() > 0}"
+                android:text="@{viewModel.folderRegistrationStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.add)}"
+                android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:text="@string/add" />
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/loading_lottie"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:onClick="@{() -> viewModel.resetFolderName()}"
-                android:padding="@dimen/spacing10"
-                android:src="@drawable/ic_delete_circle"
-                app:layout_constraintBottom_toBottomOf="@id/folder_name"
-                app:layout_constraintEnd_toEndOf="@id/folder_name"
-                app:layout_constraintTop_toTopOf="@id/folder_name" />
-
-            <TextView
-                android:id="@+id/folder_name_length"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{String.format(@string/length_format, viewModel.folderName.trim().length(), 10)}"
-                android:textAppearance="@style/Widget.TextAppearance.Detail"
-                android:textColor="@color/gray_200"
-                app:layout_constraintEnd_toEndOf="@id/folder_name"
-                app:layout_constraintTop_toTopOf="@id/folder_name_detail_text"
-                tools:text="7/10글자" />
-
-            <TextView
-                android:id="@+id/folder_name_detail_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/spacing5"
-                android:text="@string/folder_upload_name_already_exist_detail"
-                android:textAppearance="@style/Widget.TextAppearance.Detail"
-                android:visibility="@{viewModel.isExistFolderName == true ? View.VISIBLE : View.INVISIBLE}"
-                app:layout_constraintStart_toStartOf="@id/folder_name"
-                app:layout_constraintTop_toBottomOf="@id/folder_name" />
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@id/add"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/add"
+                app:lottie_fileName="lottie/loading_horizontal_black.json"
+                app:lottie_imageAssetsFolder="lottie"
+                app:lottie_loop="true" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <TextView
-            android:id="@+id/add"
-            style="@style/Widget.Button.Activate.Green"
-            android:layout_width="match_parent"
-            android:layout_marginHorizontal="@dimen/spacingBase"
-            android:layout_marginTop="@dimen/spacingBase"
-            android:enabled="@{viewModel.folderName.trim().length() > 0}"
-            android:text="@{viewModel.folderRegistrationStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.add)}"
-            android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:text="@string/add" />
-
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/loading_lottie"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/add"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/add"
-            app:lottie_fileName="lottie/loading_horizontal_black.json"
-            app:lottie_imageAssetsFolder="lottie"
-            app:lottie_loop="true" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
