[mod] TwoButton 다이얼로그 ui 수정

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,15 +41,14 @@
     <style name="Widget.Dialog" parent="">
         <item name="android:background">@drawable/shape_border_radius_32</item>
         <item name="android:backgroundTint">@color/white</item>
-        <item name="android:paddingStart">24dp</item>
-        <item name="android:paddingEnd">24dp</item>
         <item name="android:paddingTop">24dp</item>
-        <item name="android:paddingBottom">@dimen/spacingBase</item>
     </style>
 
     <style name="Widget.Dialog.Description" parent="">
         <item name="android:gravity">center</item>
         <item name="android:lineSpacingExtra">@dimen/spacingMicro</item>
+        <item name="android:paddingStart">24dp</item>
+        <item name="android:paddingEnd">24dp</item>
         <item name="android:layout_marginTop">@dimen/spacingSmall</item>
     </style>
 
@@ -90,20 +89,10 @@
         <item name="android:layout_marginStart">@dimen/spacingBase</item>
     </style>
 
-    <style name="Widget.Button.Dialog" parent="">
+    <style name="Widget.Button.Dialog" parent="Widget.Button">
         <item name="android:layout_width">0dp</item>
-        <item name="android:background">@drawable/shape_border_radius_32</item>
         <item name="android:outlineProvider">none</item>
-    </style>
-
-    <style name="Widget.Button.Dialog.Yes" parent="Widget.Button.Dialog">
-        <item name="android:backgroundTint">@color/black</item>
-    </style>
-
-    <style name="Widget.Button.Dialog.No" parent="Widget.Button.Dialog">
-        <item name="android:backgroundTint">@color/gray_50</item>
-        <item name="android:layout_marginEnd">8dp</item>
-        <item name="android:layout_marginTop">32dp</item>
+        <item name="android:padding">@dimen/spacingBase</item>
     </style>
 
     <style name="Widget.Button.Icon.Navigation" parent="Widget.Button">
@@ -126,6 +115,12 @@
     <style name="Widget.Button.Basic.TextAppearance" parent="">
         <item name="android:fontFamily">@font/suit_b</item>
         <item name="android:textColor">@color/gray_700</item>
+        <item name="android:textSize">@dimen/typographyBase</item>
+    </style>
+
+    <style name="Widget.Button.Dialog.TextAppearance" parent="">
+        <item name="android:fontFamily">@font/suit_m</item>
+        <item name="android:textColor">@color/green_600</item>
         <item name="android:textSize">@dimen/typographyBase</item>
     </style>
 
