--- a/app/src/main/res/layout/dialog_two_button.xml
+++ b/app/src/main/res/layout/dialog_two_button.xml
@@ -10,9 +10,9 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             style="@style/Widget.Dialog"
-            android:layout_marginHorizontal="24dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,27 +39,41 @@
                 app:layout_constraintTop_toBottomOf="@id/title"
                 tools:text="정말 아이템을 삭제하시겠어요?\n삭제된 아이템은 다시 복구할 수 없어요!" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/gray_100"
+                app:layout_constraintTop_toTopOf="@id/yes" />
+
             <Button
                 android:id="@+id/no"
-                style="@style/Widget.Button.Dialog.No"
+                style="@style/Widget.Button.Dialog"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
                 android:text="@string/cancel"
-                android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
+                android:textAppearance="@style/Widget.Button.Dialog.TextAppearance"
                 app:layout_constraintEnd_toStartOf="@id/yes"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/description" />
 
+            <View
+                android:layout_width="0.5dp"
+                android:layout_height="0dp"
+                android:background="@color/gray_100"
+                app:layout_constraintStart_toStartOf="@id/yes"
+                app:layout_constraintBottom_toBottomOf="@id/yes"
+                app:layout_constraintTop_toTopOf="@id/yes" />
+
             <Button
                 android:id="@+id/yes"
-                style="@style/Widget.Button.Dialog.Yes"
+                style="@style/Widget.Button.Dialog"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="@id/no"
+                android:textAppearance="@style/Widget.Button.Dialog.TextAppearance"
+                android:textColor="@color/gray_600"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/no"
                 app:layout_constraintTop_toTopOf="@id/no"
-                tools:text="삭제"/>
+                tools:text="삭제" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
