--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="black_transparent">#38000000</color>
 
     <color name="green_700">#31E864</color>
+    <color name="green_600">#68EB72</color>
     <color name="green_500">#73F87C</color>
     <color name="green_100">#EEFEEF</color>
 
