--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,13 +9,10 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_eb"
-            android:text="@string/logo_text"
-            android:textColor="@color/gray_700"
-            android:textSize="58sp"
+            android:src="@drawable/ic_app_text_logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
