[add] 회원가입화면에 이용약관 string 추가

--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -124,6 +124,20 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/sign_term"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/spacingBase"
+            android:layout_marginBottom="@dimen/spacing5"
+            android:fontFamily="@font/suit_r"
+            android:gravity="center"
+            android:text="@string/sign_term"
+            android:textColor="@color/gray_300"
+            android:textSize="@dimen/typographyDescription"
+            app:layout_constraintBottom_toTopOf="@id/next"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
             android:id="@+id/next"
             style="@style/Widget.Button.Activate.Green"
             android:layout_width="match_parent"
