--- a/app/src/main/res/layout/fragment_sign_in_email.xml
+++ b/app/src/main/res/layout/fragment_sign_in_email.xml
@@ -65,7 +65,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/spacingBase"
-                android:layout_marginBottom="@dimen/spacingBase"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
                 android:visibility="@{viewModel.isCompletedSendMail() == true ? View.GONE : View.VISIBLE}"
@@ -73,8 +72,8 @@
 
                 <ImageView
                     android:id="@+id/email_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:src="@drawable/ic_email" />
 
                 <TextView
