--- a/app/src/main/res/layout/fragment_sign_up_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email.xml
@@ -66,8 +66,8 @@
 
         <ImageView
             android:id="@+id/email_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_marginTop="@dimen/spacingBase"
             android:src="@drawable/ic_email"
             app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +92,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="@dimen/spacingBase"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@id/password_detail">
 
