--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -233,6 +233,18 @@
                         android:layout_height="0.5dp"
                         android:background="@color/gray_100" />
 
+                    <TextView
+                        android:id="@+id/opensource_license"
+                        style="@style/My.Section.SubTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/my_section_sub_title_opensource_license"
+                        android:textAppearance="@style/My.Section.SubTitle.TextAppearance" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:background="@color/gray_100" />
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
