--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -234,6 +234,19 @@
                         android:background="@color/gray_100" />
 
                     <TextView
+                        android:id="@+id/personal_info"
+                        style="@style/My.Section.SubTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/my_section_sub_title_personal_info"
+                        android:textAppearance="@style/My.Section.SubTitle.TextAppearance" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:background="@color/gray_100" />
+
+                    <TextView
                         android:id="@+id/opensource_license"
                         style="@style/My.Section.SubTitle"
                         android:layout_width="match_parent"
@@ -245,6 +258,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="0.5dp"
                         android:background="@color/gray_100" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
