--- a/app/src/main/res/layout/fragment_wish_item_detail.xml
+++ b/app/src/main/res/layout/fragment_wish_item_detail.xml
@@ -269,25 +269,18 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
             android:id="@+id/go_to_shop_btn"
             android:layout_width="match_parent"
             android:layout_height="58dp"
-            android:background="@color/black"
+            android:background="@{context.getColor(viewModel.wishItem.url == null ? R.color.gray_50 : R.color.black)}"
+            android:enabled="@{viewModel.wishItem.url == null ? false : true}"
+            android:fontFamily="@font/suit_b"
+            android:gravity="center"
             android:paddingVertical="@dimen/spacingBase"
-            app:layout_constraintBottom_toBottomOf="parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/suit_b"
-                android:text="@string/go_to_shop_button_text"
-                android:textColor="@color/white"
-                android:textSize="@dimen/typographyBase"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            android:text="@string/go_to_shop_button_text"
+            android:textColor="@{context.getColor(viewModel.wishItem.url == null ? R.color.gray_300 : R.color.white)}"
+            android:textSize="@dimen/typographyBase"
+            app:layout_constraintBottom_toBottomOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
