[feat] 컐린더 아이템 가져오기 및 ui 구현

--- a/app/src/main/res/layout/fragment_noti_calendar.xml
+++ b/app/src/main/res/layout/fragment_noti_calendar.xml
@@ -6,6 +6,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <import type="androidx.navigation.Navigation" />
 
         <variable
@@ -14,6 +16,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -42,10 +45,10 @@
                 android:text="@{viewModel.calendarMonthTitle}"
                 android:textColor="@color/gray_700"
                 android:textSize="20sp"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="March 2022" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -54,7 +57,7 @@
             android:id="@+id/day_of_the_week"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing12"
+            android:layout_marginTop="@dimen/spacingSmall"
             android:columnCount="7"
             android:rowCount="1"
             app:layout_constraintTop_toBottomOf="@id/toolbar">
@@ -95,12 +98,90 @@
                 android:textAppearance="@style/Calendar.DayOfTheWeek.TextAppearance" />
         </GridLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/gray_100"
+            app:layout_constraintTop_toTopOf="@id/calendar" />
+
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/calendar"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/spacingSmall"
             app:layout_constraintTop_toBottomOf="@id/day_of_the_week" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/gray_100"
+            app:layout_constraintTop_toTopOf="@id/noti_schedule_container" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/noti_schedule_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/calendar">
+
+            <TextView
+                android:id="@+id/noti_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/spacing12"
+                android:layout_marginTop="@dimen/spacing20"
+                android:fontFamily="@font/suit_b"
+                android:text="일정"
+                android:textColor="@color/gray_700"
+                android:textSize="@dimen/typographyBase"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="3월 29일 일정" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/noti_list"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginHorizontal="@dimen/spacingBase"
+                android:layout_marginTop="13dp"
+                android:clipToPadding="false"
+                android:paddingBottom="13dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/noti_date"
+                tools:listitem="@layout/item_calendar_noti" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="@{viewModel.notiList.size() > 0 ? View.GONE : View.VISIBLE}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/no_item_view_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_noti_large"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    style="@style/Widget.TextAppearance.NoItemView.Detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing20"
+                    android:text="@string/noti_no_item_view"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/no_item_view_icon" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
